<resources>
    <string name="app_name">TalkMessenger</string>
    <string name="tvtView_login_intro">Bem vindo ao TextMessenger</string>
    <string name="login_button">Login</string>
    <string name="verify_phone_textview">Verifique seu número</string>
    <string name="verify_phone_text_description">Por favor insira seu numero com DDD para receber o SMS de verificação:</string>
    <string name="button_next_text">Avançar</string>
    <string name="text_send_code_verification">Enviar codigo de verificação</string>
    <string name="button_resend_sms">Reenviar SMS</string>
    <string name="profile_info">Informações do Perfil</string>
    <string name="profile_info_description">Por favor insira seu nome e foto do perfil</string>
    <string name="input_name">Insira seu Nome Aqui</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>