<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/profile_info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/profile_info_description"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImgView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_icons8_bt21_rj"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/input_name"
        android:textColorHint="@color/white"
        android:imeActionLabel="Send"
        android:imeOptions="actionUnspecified"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/button_next_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp" />
</LinearLayout>